# Pichunter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  code.ts  manifest.json  package-lock.json  package.json  tsconfig.json  ui.html
.agent/rules/: 00-A-RulesGuideline.md  01-A-AgentBehavior.md  02-A-ProjectSummary.md  03-G-PythonStyle.md  04-G-FigmaNotes.md
.kiro/specs/ai-component-recognition/: design.md  requirements.md  tasks.md
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/services/: ai_service.py
frontend/: code.ts  selectionExport.ts  types.ts  ui.html
frontend/core/api/: config.ts
frontend/core/utils/: convert.ts
frontend/modules/recognition/api/: mockData.ts
frontend/modules/recognition/api/services/: recognition.service.ts
frontend/modules/recognition/logic/: selectionExport.ts
frontend/modules/recognition/logic/handlers/: recognition.handler.ts
frontend/modules/recognition/logic/transformers/: recognition.transformer.ts
frontend/modules/recognition/types/: recognition.types.ts
specs/: AGENTS.md  tasks.md
src/: code.ts  mockData.ts  types.ts  ui.html
