[project]
name = "pichunter-backend"
version = "0.1.0"
description = "Backend service for the Pichunter Figma plugin"
requires-python = ">=3.10"

# 项目依赖
# fastapi: 高性能 Web API 框架
# uvicorn[standard]: ASGI 服务器，支持异步和热重载
# python-multipart: 处理表单和文件上传
# pillow: 图片处理库
# httpx: 异步 HTTP 客户端
dependencies = [
  "fastapi==0.115.5",           # 核心框架：类似 UIKit/SwiftUI，负责构建 App 的骨架和逻辑
  "uvicorn[standard]==0.32.0",  # 服务器：类似 iOS 系统 (SpringBoard)，负责监听网络端口并唤醒 App (FastAPI)
  "python-multipart==0.0.9",    # 数据解析：类似 JSONDecoder，但专门用来解析文件上传 (Multipart) 数据
  "pillow==11.0.0",             # 图片处理：类似 CoreGraphics / UIImage，用来处理图片数据               # 网络请求：类似 URLSession，让后端代码可以发起网络请求 (比如调用 OpenAI)
  "httpx==0.27.2",
  "google-generativeai>=0.8.5",
  "python-dotenv>=1.0.1",
]

[tool.uv]
# uv 工具配置，package=false 表示不打包项目
package = false

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]

[tool.mypy]
# Python 版本
python_version = "3.11"

# 严格模式：强制要求类型注解
disallow_untyped_defs = true        # 禁止没有类型注解的函数(最重要的一条)
disallow_any_unimported = false     # 允许导入的 Any 类型
disallow_any_expr = false           # 允许 Any 表达式
disallow_any_decorated = false      # 允许装饰器返回 Any
disallow_any_explicit = false       # 允许显式的 Any
disallow_any_generics = false       # 允许泛型中的 Any
disallow_subclassing_any = true     # 禁止继承 Any

# 警告设置
warn_return_any = true              # 警告返回 Any
warn_unused_configs = true          # 警告未使用的配置
warn_redundant_casts = true         # 警告多余的类型转换
warn_unused_ignores = true          # 警告未使用的 type: ignore

# 其他设置
strict_optional = true              # 严格的 Optional 检查
check_untyped_defs = true           # 检查没有类型注解的函数体
